# new-project-py

./: LICENSE  README.md  pyproject.toml
new_project_py/: cli.py
